@@ -8,8 +8,10 @@ ver 0.21.24 (not yet released)
   - wildmidi: attempt to detect WildMidi using pkg-config
   - wildmidi: fix Windows build failure
 * Android
+  - enable the decoder plugins ModPlug and WildMidi
   - fix build failure with Android NDK r21
 * Windows
+  - enable the decoder plugins ModPlug and WildMidi
   - work around Meson bug breaking the Windows build with GCC 10
 * fix unit test failure
 
